Set ============================= test session starts ============================== platform linux -- Python 3.14.0, pytest-8.4.2, pluggy-1.6.0 rootdir: /home/cannabis/repos/tosk-bot configfile: pyproject.toml plugins: anyio-4.11.0, asyncio-1.2.0 asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function collected 6 items
tests/test_config.py ...                                                 [ 50%]
tests/test_handlers.py ...                                               [100%]

============================== 6 passed in 0.34s =============================== hook to run only if code base was changed

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,8 @@ repos:
         entry: poetry run pytest
         language: system
         pass_filenames: false
-        always_run: true
+        always_run: false
+        files: ^(bot/.*\.py|tests/.*\.py)$
   - repo: https://github.com/psf/black
     rev: 25.9.0  # Use the latest stable Black version
     hooks:
