--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,30 @@
 [project]
 name = "tosk-bot"
 version = "0.2.0"
-description = "Studying containers"
+description = ""
 authors = [
-    {name = "Your Name",email = "you@example.com"}
+    {name = "Peter Zakharov",email = "zakharovpnsd@mail.ru"}
 ]
+license = {text = "Unlicense"}
 readme = "README.md"
-requires-python = "3.14"
+requires-python = ">=3.14,<4.0"
 dependencies = [
-    "python-telegram-bot (>=22.5,<23.0)",
-    "pydantic (>=2.12.3,<3.0.0)",
+    "pydantic (>=1.8.2,<3.0.0)",
     "pydantic-settings (>=2.11.0,<3.0.0)",
-    "pytest (>=8.4.2,<9.0.0)",
-    "pytest-asyncio (>=1.2.0,<2.0.0)",
-    "fire (>=0.7.1,<0.8.0)"
-]
-packages = [
-    {include = "bot"}
+    "python-telegram-bot (>=22.5,<23.0)",
+    "pika (>=1.3.2,<2.0.0)",
+    "aio-pika (>=9.5.7,<10.0.0)",
+    "pure-teleapi[httpx] @ git+https://github.com/archqua/pure-teleapi.git@pure",
+    # "pure-teleapi[httpx]",
 ]
 
 [dependency-groups]
 dev = [
+    "pytest (>=8.4.2,<9.0.0)",
     "pre-commit (>=4.3.0,<5.0.0)",
-    "black (>=25.9.0,<26.0.0)"
+    "black (>=25.9.0,<26.0.0)",
+    "pytest-asyncio (>=1.3.0,<2.0.0)",
+    "pytest-timeout (>=2.4.0,<3.0.0)"
 ]
 
 
@@ -30,8 +32,6 @@ dev = [
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
-package-mode = false
-
 [tool.pytest.ini_options]
-pythonpath = "."
+pythonpath = "./tosk_bot"
+timeout = 5
