--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,10 @@ dev = [
     "pre-commit (>=4.3.0,<5.0.0)",
     "black (>=25.9.0,<26.0.0)",
     "pytest-asyncio (>=1.3.0,<2.0.0)",
-    "pytest-timeout (>=2.4.0,<3.0.0)"
+    "pytest-timeout (>=2.4.0,<3.0.0)",
+    "testcontainers (>=4.13.3,<5.0.0)",
+    "autoflake (>=2.3.1,<3.0.0)",
+    "isort (>=7.0.0,<8.0.0)"
 ]
 
 
@@ -37,3 +40,6 @@ pythonpath = "./tosk_bot"
 # there are repeated test file names in different directories
 addopts = "--import-mode=importlib"
 timeout = 5
+
+[tool.isort]
+profile = "black"
